Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignNumberUndefinedField.quorum
class Main
    number v = undefined
    action Main
        Test(v)
    end

    action Test(number var)
    end
end
